# boustrophedon_planner

./: .clang-format  .clang-tidy  LICENSE  README.md
boustrophedon_client/: CMakeLists.txt  package.xml
boustrophedon_client/include/boustrophedon_client/: boustrophedon_planner_client.h
boustrophedon_client/launch/: boustrophedon_client_launch.py
boustrophedon_client/src/boustrophedon_client/: boustrophedon_planner_client.cpp  boustrophedon_planner_node.cpp
boustrophedon_msgs/: CMakeLists.txt  package.xml
boustrophedon_msgs/action/: PlanMowingPath.action
boustrophedon_msgs/msg/: StripingPlan.msg  StripingPoint.msg
boustrophedon_msgs/srv/: ConvertPlanToPath.srv  ProducePath.srv
boustrophedon_server/: CMakeLists.txt  package.xml
boustrophedon_server/include/boustrophedon_server/: boustrophedon_planner_server.h  boustrophedon_types.h  cgal_types.h  cgal_utils.h  outline_planner.h  striping_planner.h
boustrophedon_server/include/boustrophedon_server/cellular_decomposition/: cell.h  polygon_decomposer.h
boustrophedon_server/launch/: boustrophedon_server.launch  boustrophedon_server_launch.py
boustrophedon_server/scripts/: boustrophedon_test.py
boustrophedon_server/src/boustrophedon_server/: boustrophedon_planner_client_node.cpp  boustrophedon_planner_node.cpp  boustrophedon_planner_server.cpp  boustrophedon_types.cpp  cgal_utils.cpp  outline_planner.cpp  striping_planner.cpp
boustrophedon_server/src/boustrophedon_server/cellular_decomposition/: cell.cpp  polygon_decomposer.cpp
scripts/: create_boundary.py  display_path.py
