<?xml version="1.0"?>
<package format="3">
    <name>boustrophedon_client</name>
    <version>0.0.1</version>
    <description>Actionlib client to evaluate the Boustrophedon Planner</description>
    <license>TODO: License declaration</license>

    <maintainer email="dylan.decoeyer@quimesis.be">Dylan De Coeyer</maintainer>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>boustrophedon_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>actionlib_msgs</depend>
    <depend>tf2</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <exec_depend>ros2launch</exec_depend>

    <export>
      <build_type>ament_cmake</build_type>
    </export>
</package>
