<?xml version="1.0"?>
<package format="3">
    <name>boustrophedon_msgs</name>
    <version>0.0.1</version>
    <description>Custom messages for the Boustrophedon Planner</description>

    <maintainer email="cbq@greenzie.com">Charles Brian Quinn</maintainer>
    <maintainer email="oswinso@gmail.com">Oswin So</maintainer>

    <license>TODO</license>

    <author email="cbq@greenzie.com">Charles Brian Quinn</author>
    <author email="oswinso@gmail.com">Oswin So</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>actionlib_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
      <build_type>ament_cmake</build_type>
    </export>
</package>
